Fixes a display issue on IE

--- a/src/onegov.gis/onegov/gis/assets/css/leaflet-integration.css
+++ b/src/onegov.gis/onegov/gis/assets/css/leaflet-integration.css
@@ -141,7 +141,7 @@ button.open-active {
 }
 
 .leaflet-control-geocoder .leaflet-control-geocoder-form {
-    width: 174px;
+    width: 165px;
 }
 
 .leaflet-control-geocoder .leaflet-control-geocoder-form input {
